Fixes #462